--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     background-color: #E6E6E6;
     margin: 0;
     padding: 0;
+    font-family: 'Bellota Text', cursive;
 }
 
 #menu {
@@ -28,7 +29,6 @@
     user-select: none; 
     background-color: transparent;
     vertical-align: middle;
-    font-family: 'Bellota Text', cursive;
     font-size: 30px;
 }
 
@@ -39,3 +39,60 @@
 #orders {
     border-bottom: 4px solid transparent;
 }
+
+#searchBox {
+    background-color: #FBFBFB;
+    margin-top: 70px;
+    margin-left: 5%;
+    width: 40%;
+    height: 150px;
+    filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.25));
+    padding: 8px;
+}
+
+#searchTitleDiv {
+    background-color: transparent;
+    display: flex;
+    flex-direction: row;
+}
+
+.titleSection {
+    background-color: transparent;
+    font-size: 25px;
+    font-weight: bold;
+    user-select: none;
+    vertical-align: middle;
+}
+
+.icon {
+    width: 30px;
+    height: 30px;
+    background-color: transparent;
+    order: -1;
+    margin-right: 5px;
+    user-select: none; 
+}
+
+#searchBar {
+    border: 3px solid #058ED9;
+    border-radius: 20px;
+    margin-top: 20px;
+    margin-left: 10%;
+    padding: 3px;
+    padding-left: 10px;
+    font-size: 20px;
+    height: 30px;
+    width: 40%;
+    background: url("Icons/search.svg") top right    no-repeat;
+}
+
+#listBox {
+    background-color: #FBFBFB;
+    margin-top: 40px;
+    margin-left: 5%;
+    margin-right: 5%;
+    height: 150px;
+    filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.25));
+    padding: 8px;
+}
+
