--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Bellota Text', cursive;
+    
 }
 
 #menu {
@@ -94,5 +95,16 @@
     height: 150px;
     filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.25));
     padding: 8px;
+    display: flex;
+    flex-direction: row;
 }
 
+#addTitle {
+    margin-left: 15%;
+    cursor: pointer;
+}
+
+#exportBtn {
+    margin-left: 15%;
+    cursor: pointer;
+}
