--- a/style.css
+++ b/style.css
@@ -41,14 +41,17 @@
     border-bottom: 4px solid transparent;
 }
 
+.box {
+    filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.25));
+    padding: 8px;
+}
+
 #searchBox {
     background-color: #FBFBFB;
     margin-top: 70px;
     margin-left: 5%;
     width: 40%;
     height: 150px;
-    filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.25));
-    padding: 8px;
 }
 
 #searchTitleDiv {
@@ -93,8 +96,6 @@
     margin-left: 5%;
     margin-right: 5%;
     height: 150px;
-    filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.25));
-    padding: 8px;
     display: flex;
     flex-direction: row;
 }
@@ -108,3 +109,66 @@
     margin-left: 15%;
     cursor: pointer;
 }
+
+#overlayAddClient {
+    position: fixed;
+    /* height: 80%; */
+    width: 600px;
+    display: flex;
+    flex-direction: row;
+    z-index: 2; 
+    top: 50px;
+    left: 30%;
+    background-color: transparent;
+}
+
+.fidelity {
+    background-color: #D9D9D9;
+    height: 25%;
+    width: 130px;
+    border-radius: 12px 0px 0px 12px;
+    margin-top: 50px;
+    padding: 10px;
+}
+
+.fidelityBox {
+    background-color: white;
+}
+
+.itemForm {
+    width: 100%;
+    height: 25px;
+    background-color: #ECECEC;
+    border: none;
+    border-radius: 6px;
+    color: black;
+    font-size: 18px;
+    padding-left: 3px;
+    margin-top: 7px;
+    margin-bottom: 7px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    display: none;
+}
+
+.subtitle {
+    font-weight: bold;
+    background-color: transparent;
+    font-size: 18px;
+    margin-bottom: 7px;
+}
+
+.form {
+    background-color: #D9D9D9;
+    height: 100%;
+    width: 470px;
+    border-radius: 12px;
+    padding: 10px;
+}
+
+.identityBox {
+    background-color: white;
+}
+
