--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@
     font-size: 25px;
     font-weight: bold;
     user-select: none;
+    line-height: 30px;
     vertical-align: middle;
 }
 
@@ -112,14 +113,14 @@
 
 #overlayAddClient {
     position: fixed;
-    /* height: 80%; */
-    width: 600px;
+    width: 550px;
     display: flex;
     flex-direction: row;
     z-index: 2; 
     top: 50px;
     left: 30%;
     background-color: transparent;
+    display: none;
 }
 
 .fidelity {
@@ -135,7 +136,7 @@
     background-color: white;
 }
 
-.itemForm {
+.itemFormFidelity {
     width: 100%;
     height: 25px;
     background-color: #ECECEC;
@@ -158,17 +159,126 @@ input::-webkit-inner-spin-button {
     background-color: transparent;
     font-size: 18px;
     margin-bottom: 7px;
+    white-space: nowrap;
 }
 
 .form {
     background-color: #D9D9D9;
     height: 100%;
-    width: 470px;
+    width: 420px;
     border-radius: 12px;
     padding: 10px;
 }
 
-.identityBox {
+.formBox {
     background-color: white;
+}
+
+.blockInfo {
+    background-color: transparent;
+    display: flex;
+    flex-direction: row;
+    vertical-align: middle;
+    width: 100%;
+    margin-top: 5px;
+}
+
+.itemForm {
+    width: 100%;
+    height: 25px;
+    background-color: #ECECEC;
+    border: none;
+    border-radius: 6px;
+    color: black;
+    font-size: 18px;
+    padding-left: 3px;
+    margin-left: 10px;
+}
+
+.secondItem {
+    margin-left: 10px;
+}
+
+#phone {
+    width: 200px;
+}
+
+#dropdownTel {
+    width: 60px;
+}
+
+#addTel {
+    width: 25px;
+    background-color: #B4B4B4;
+    background-image: url(Icons/plus.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 15px 15px;
+    cursor: pointer;
+}
+
+#telBox {
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    vertical-align: middle;
+    width: 100%;
+}
+
+#onglets {
+    background-color: transparent;
+    display: flex;
+    flex-direction: row;
+}
+
+.ongletAdr {
+    background-color: #B4B4B4;
+    border: none;
+    border-radius: 8px 8px 0px 0px;
+    padding: 2px;
+    z-index: 1;
+    height: 25px;
+    width: 70px;
+    font-weight: bold;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+#addAdr {
+    background-image: url(Icons/plus.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 15px 15px;
+    width: 25px;
+    height: 25px;
+}
+
+#dropdownAdr {
+    width: 200px;
+}
+
+#numVoie {
+    width: 40px;
+    text-align: center;
+    padding-left: 0px;
+}
+
+#zip {
+    width: 70px;
+    text-align: center;
+    padding-left: 0px;
+}
+
+#closeButton {
+    background-image: url(Icons/close.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 15px 15px;
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    float: right;
 }
 
