--- a/style.css
+++ b/style.css
@@ -224,13 +224,13 @@ input::-webkit-inner-spin-button {
     width: 100%;
 }
 
-#onglets {
+.onglets {
     background-color: transparent;
     display: flex;
     flex-direction: row;
 }
 
-.ongletAdr {
+.onglet {
     background-color: #B4B4B4;
     border: none;
     border-radius: 8px 8px 0px 0px;
@@ -241,15 +241,6 @@ input::-webkit-inner-spin-button {
     font-weight: bold;
     font-size: 18px;
     cursor: pointer;
-}
-
-#addAdr {
-    background-image: url(Icons/plus.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 15px 15px;
-    width: 25px;
-    height: 25px;
 }
 
 #dropdownAdr {
@@ -298,5 +289,45 @@ input::-webkit-inner-spin-button {
     width: 100%;
     border-radius: 12px;
     padding: 10px;
+}
+
+.blockFormBox {
+    background-color: transparent;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.paiementBox {
+    background-color: transparent;
+    width: 35%;
+}
+
+.addOnglet {
+    background-image: url(Icons/plus.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 15px 15px;
+    width: 25px;
+    height: 25px;
+}
+
+.productsBox {
+    background-color: transparent;
+    width: 100%;
+    margin-left: 20px;
+}
+
+#addProduct {
+    background-image: url(Icons/plus.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 15px 15px;
+    width: 25px;
+    height: 25px;
+}
+
+.ongletProduct {
+    float: right;
 }
 
