--- a/style.css
+++ b/style.css
@@ -345,7 +345,7 @@ input::-webkit-inner-spin-button {
 .elementThead {
     background-color: #058ED9;
     color: white;
-    border: none;
+    border: 1px solid #058ED9;
 }
 
 .elementTbody {
