--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@
     background: url("Icons/search.svg") top right    no-repeat;
 }
 
-.listBox {
+#listBox {
     background-color: #FBFBFB;
     margin-top: 40px;
     margin-left: 5%;
@@ -116,6 +116,17 @@
 }
 
 #overlayAddClient {
+    position: absolute;
+    width: 550px;
+    z-index: 2; 
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%, -50%);
+    background-color: transparent;
+    display: none;
+}
+
+#overlayViewClient {
     position: absolute;
     width: 550px;
     z-index: 2; 
@@ -355,3 +366,6 @@ input::-webkit-inner-spin-button {
     line-height: 20px;
 }
 
+.code_region {
+    width: 60px;
+}
