--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     margin: 0;
     padding: 0;
     font-family: 'Bellota Text', cursive;
-    
 }
 
 #menu {
@@ -96,7 +95,8 @@
     margin-top: 40px;
     margin-left: 5%;
     margin-right: 5%;
-    height: 150px;
+    min-height: 150px;
+    height: auto;
 }
 
 .listTitleDiv {
