--- a/style.css
+++ b/style.css
@@ -169,10 +169,10 @@
     margin-bottom: 7px;
 }
 
-input::-webkit-outer-spin-button,
+/* input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     display: none;
-}
+} */
 
 .subtitle {
     font-weight: bold;
@@ -292,7 +292,6 @@ input::-webkit-inner-spin-button {
     border: none;
     background-color: transparent;
     float: right;
-    order: 2;
 }
 
 .editButton {
@@ -307,7 +306,20 @@ input::-webkit-inner-spin-button {
     border: none;
     background-color: transparent;
     float: right;
-    order: 1;
+}
+
+.delButton {
+    background-image: url(Icons/delete.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 20px;
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+    margin-top: 8px;
+    border: none;
+    background-color: transparent;
+    float: right;
 }
 
 .validateButton {
@@ -347,6 +359,17 @@ input::-webkit-inner-spin-button {
     display: none;
 }
 
+#overlayEditOrder {
+    position: absolute;
+    width: 600px;
+    z-index: 2; 
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%, -50%);
+    background-color: transparent;
+    display: none;
+}
+
 .formOrder {
     background-color: #D9D9D9;
     height: 100%;
@@ -362,9 +385,13 @@ input::-webkit-inner-spin-button {
     flex-direction: row;
 }
 
+.blockForm {
+
+}
+
 .paiementBox {
     background-color: transparent;
-    width: 35%;
+    width: 40%;
 }
 
 .addOnglet {
@@ -380,6 +407,11 @@ input::-webkit-inner-spin-button {
     background-color: transparent;
     width: 100%;
     margin-left: 20px;
+}
+
+.deliveryBox {
+    background-color: transparent;
+    width: 55%;
 }
 
 #addProduct {
@@ -434,3 +466,17 @@ input::-webkit-inner-spin-button {
     color: #058ED9;
     font-weight: bold;
 } */
+
+.n_product {
+    width: 30px;
+}
+
+#addProduct {
+    width: 35px;
+    background-color: #B4B4B4;
+    background-image: url(Icons/plus.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 15px 15px;
+    cursor: pointer;
+}
