--- a/style.css
+++ b/style.css
@@ -482,3 +482,9 @@ input::-webkit-inner-spin-button {
     overflow-y: scroll;
     scrollbar-color: #B4B4B4 #D9D9D9;
 }
+
+#boxProductsView {
+    height: 150px;
+    overflow-y: scroll;
+    scrollbar-color: #B4B4B4 #D9D9D9;
+}
