--- a/style.css
+++ b/style.css
@@ -407,7 +407,13 @@ input::-webkit-inner-spin-button {
 
 .deliveryBox {
     background-color: transparent;
-    width: 55%;
+    width: 180%;
+}
+
+.totalBox {
+    background-color: transparent;
+    width: 100%;
+    margin-left: 20px;
 }
 
 #addProduct {
@@ -487,4 +493,14 @@ input::-webkit-inner-spin-button {
     height: 150px;
     overflow-y: scroll;
     scrollbar-color: #B4B4B4 #D9D9D9;
+}
+
+.total {
+    background-color: #058ED9;
+    color: white;
+}
+
+.tot {
+    width: 100px;
+    float: right;
 }
