--- a/style.css
+++ b/style.css
@@ -350,7 +350,7 @@ input::-webkit-inner-spin-button {
 
 #overlayViewOrder {
     position: absolute;
-    width: 600px;
+    width: 800px;
     z-index: 2; 
     top: 50%;
     left: 50%;
@@ -361,7 +361,7 @@ input::-webkit-inner-spin-button {
 
 #overlayEditOrder {
     position: absolute;
-    width: 600px;
+    width: 800px;
     z-index: 2; 
     top: 50%;
     left: 50%;
@@ -503,4 +503,9 @@ input::-webkit-inner-spin-button {
 .tot {
     width: 100px;
     float: right;
+    background-color: white;
+}
+
+#addPaiement {
+    order: 9999;
 }
